--- a/Cheater1.ipynb
+++ b/Cheater1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 164,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(11, 0), (14, 1), (12, 3), (11, 2), (10, 0), (10, 3), (13, 2), (14, 2)]\n",
-      "[(12, 1), (9, 3), (12, 0), (11, 3), (10, 1), (13, 3), (12, 2), (10, 2)]\n"
+      "[(9, 0), (9, 3), (11, 0), (14, 1), (9, 2), (13, 3), (11, 2), (14, 2)]\n",
+      "[(11, 1), (12, 0), (11, 3), (10, 1), (12, 3), (14, 0), (10, 0), (13, 2)]\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 167,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 168,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 169,
    "metadata": {
     "collapsed": true
    },
@@ -361,6 +361,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RandomPlayer(Player):\n",
+    "    ### player's random strategy\n",
+    "    def putCard(self, declared_card):\n",
+    "        ### check if must draw\n",
+    "        if len(self.cards) == 1 and declared_card is not None and self.cards[0][0] < declared_card[0]:\n",
+    "            return \"draw\"\n",
+    "        ### player randomly decides which card put on the table\n",
+    "        card = random.choice(self.cards)\n",
+    "        declaration = card\n",
+    "        ### player randomly decides whether to cheat or not\n",
+    "        cheat = np.random.choice([True, False])\n",
+    "        ### if (s)he decides to cheat, (s)he randomly declares the card.\n",
+    "        if cheat:\n",
+    "            declaration = random.choice(self.cards)             \n",
+    "        ### Yet, declared card should be no worse than a card on the top of the pile . \n",
+    "        if declared_card is not None and declaration[0] < declared_card[0]:\n",
+    "            declaration = (min(declared_card[0]+1,14), declaration[1])\n",
+    "        ### return the decision (true card) and declaration (player's declaration)\n",
+    "        return card, declaration\n",
+    "    \n",
+    "    ### randomly decides whether to check or not\n",
+    "    def checkCard(self, opponent_declaration):\n",
+    "        return np.random.choice([True, False])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -369,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 171,
    "metadata": {
     "scrolled": false
    },
@@ -379,91 +410,43 @@
      "output_type": "stream",
      "text": [
       "Player (1): Player A received:\n",
-      "[(11, 1), (12, 1), (14, 1), (11, 3), (12, 3), (13, 3), (12, 2), (13, 2)]\n",
+      "[(11, 1), (13, 1), (11, 0), (10, 1), (13, 0), (9, 2), (13, 3), (10, 0)]\n",
       "Player (2): OUR player received:\n",
-      "[(13, 1), (11, 0), (10, 1), (9, 2), (14, 3), (10, 3), (9, 1), (10, 2)]\n",
+      "[(9, 0), (12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (11, 2), (13, 2)]\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
-      "==== Player A MOVES ====\n",
+      "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (12, 1), (14, 1), (11, 3), (12, 3), (13, 3), (12, 2), (13, 2)]\n",
+      "[(11, 1), (13, 1), (11, 0), (10, 1), (13, 0), (9, 2), (13, 3), (10, 0)]\n",
       "Player (1): OUR player hand:\n",
-      "[(13, 1), (11, 0), (10, 1), (9, 2), (14, 3), (10, 3), (9, 1), (10, 2)]\n",
+      "[(9, 0), (12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (11, 2), (13, 2)]\n",
       "Pile: \n",
       "[]\n",
       "Declared top card:\n",
       "None\n",
       "\n",
-      "[+] Player A puts (12, 3) and declares (12, 3)\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "\n",
-      "\n",
-      "==== CURRENT STATE ================================\n",
-      "==== OUR player MOVES ====\n",
-      "Player (0): Player A hand:\n",
-      "[(11, 1), (12, 1), (14, 1), (11, 3), (13, 3), (12, 2), (13, 2)]\n",
-      "Player (1): OUR player hand:\n",
-      "[(13, 1), (11, 0), (10, 1), (9, 2), (14, 3), (10, 3), (9, 1), (10, 2)]\n",
-      "Pile: \n",
-      "[(12, 3)]\n",
-      "Declared top card:\n",
-      "(12, 3)\n",
-      "\n",
-      "[+] OUR player puts (13, 1) and declares (13, 1)\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "\n",
-      "\n",
-      "==== CURRENT STATE ================================\n",
-      "==== Player A MOVES ====\n",
-      "Player (0): Player A hand:\n",
-      "[(11, 1), (12, 1), (14, 1), (11, 3), (13, 3), (12, 2), (13, 2)]\n",
-      "Player (1): OUR player hand:\n",
-      "[(11, 0), (10, 1), (9, 2), (14, 3), (10, 3), (9, 1), (10, 2)]\n",
-      "Pile: \n",
-      "[(12, 3), (13, 1)]\n",
-      "Declared top card:\n",
-      "(13, 1)\n",
-      "\n",
-      "[+] Player A puts (11, 1) and declares (14, 1)\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "\n",
-      "\n",
-      "==== CURRENT STATE ================================\n",
-      "==== OUR player MOVES ====\n",
-      "Player (0): Player A hand:\n",
-      "[(12, 1), (14, 1), (11, 3), (13, 3), (12, 2), (13, 2)]\n",
-      "Player (1): OUR player hand:\n",
-      "[(11, 0), (10, 1), (9, 2), (14, 3), (10, 3), (9, 1), (10, 2)]\n",
-      "Pile: \n",
-      "[(12, 3), (13, 1), (11, 1)]\n",
-      "Declared top card:\n",
-      "(14, 1)\n",
-      "\n",
-      "[+] OUR player puts (14, 3) and declares (14, 3)\n",
+      "[+] OUR player puts (9, 0) and declares (9, 0)\n",
       "[!] Player A: I want to check\n",
       "\tYou are wrong!\n",
-      "Feedback = OUR player : checked this turn = True; I checked = False; I drew cards = False; revealed card = None; number of taken cards = 3\n",
-      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (14, 3); number of taken cards = 3\n",
+      "Feedback = OUR player : checked this turn = True; I checked = False; I drew cards = False; revealed card = None; number of taken cards = 1\n",
+      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (9, 0); number of taken cards = 1\n",
       "Cards taken: \n",
-      "[(13, 1), (11, 1), (14, 3)]\n",
+      "[(9, 0)]\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
       "==== Player A MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(12, 1), (14, 1), (11, 3), (13, 3), (12, 2), (13, 2), (13, 1), (11, 1), (14, 3)]\n",
+      "[(11, 1), (13, 1), (11, 0), (10, 1), (13, 0), (9, 2), (13, 3), (10, 0), (9, 0)]\n",
       "Player (1): OUR player hand:\n",
-      "[(11, 0), (10, 1), (9, 2), (10, 3), (9, 1), (10, 2)]\n",
+      "[(12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (11, 2), (13, 2)]\n",
       "Pile: \n",
-      "[(12, 3)]\n",
+      "[]\n",
       "Declared top card:\n",
       "None\n",
       "\n",
-      "[+] Player A puts (14, 1) and declares (13, 3)\n",
+      "[+] Player A puts (10, 0) and declares (9, 2)\n",
       "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "\n",
@@ -471,17 +454,65 @@
       "==== CURRENT STATE ================================\n",
       "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(12, 1), (11, 3), (13, 3), (12, 2), (13, 2), (13, 1), (11, 1), (14, 3)]\n",
+      "[(11, 1), (13, 1), (11, 0), (10, 1), (13, 0), (9, 2), (13, 3), (9, 0)]\n",
       "Player (1): OUR player hand:\n",
-      "[(11, 0), (10, 1), (9, 2), (10, 3), (9, 1), (10, 2)]\n",
+      "[(12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (11, 2), (13, 2)]\n",
       "Pile: \n",
-      "[(12, 3), (14, 1)]\n",
+      "[(10, 0)]\n",
       "Declared top card:\n",
-      "(13, 3)\n",
+      "(9, 2)\n",
       "\n",
-      "[+] OUR player decides to draw cards\n",
+      "[+] OUR player puts (11, 2) and declares (11, 2)\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n"
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "\n",
+      "\n",
+      "==== CURRENT STATE ================================\n",
+      "==== Player A MOVES ====\n",
+      "Player (0): Player A hand:\n",
+      "[(11, 1), (13, 1), (11, 0), (10, 1), (13, 0), (9, 2), (13, 3), (9, 0)]\n",
+      "Player (1): OUR player hand:\n",
+      "[(12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (13, 2)]\n",
+      "Pile: \n",
+      "[(10, 0), (11, 2)]\n",
+      "Declared top card:\n",
+      "(11, 2)\n",
+      "\n",
+      "[+] Player A puts (11, 0) and declares (11, 0)\n",
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "\n",
+      "\n",
+      "==== CURRENT STATE ================================\n",
+      "==== OUR player MOVES ====\n",
+      "Player (0): Player A hand:\n",
+      "[(11, 1), (13, 1), (10, 1), (13, 0), (9, 2), (13, 3), (9, 0)]\n",
+      "Player (1): OUR player hand:\n",
+      "[(12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (13, 2)]\n",
+      "Pile: \n",
+      "[(10, 0), (11, 2), (11, 0)]\n",
+      "Declared top card:\n",
+      "(11, 0)\n",
+      "\n",
+      "[+] OUR player puts (11, 3) and declares (11, 3)\n",
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "\n",
+      "\n",
+      "==== CURRENT STATE ================================\n",
+      "==== Player A MOVES ====\n",
+      "Player (0): Player A hand:\n",
+      "[(11, 1), (13, 1), (10, 1), (13, 0), (9, 2), (13, 3), (9, 0)]\n",
+      "Player (1): OUR player hand:\n",
+      "[(12, 1), (14, 1), (12, 0), (14, 0), (13, 2)]\n",
+      "Pile: \n",
+      "[(10, 0), (11, 2), (11, 0), (11, 3)]\n",
+      "Declared top card:\n",
+      "(11, 3)\n",
+      "\n",
+      "[+] Player A puts (13, 1) and declares (13, 0)\n",
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n"
      ]
     }
    ],
@@ -497,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 172,
    "metadata": {
     "collapsed": true
    },
@@ -537,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +576,7 @@
      "output_type": "stream",
      "text": [
       "Wins all:\n",
-      "[ 7.769 92.231]\n",
+      "[ 7.583 92.417]\n",
       "Max:\n",
       "[0, 100]\n"
      ]
@@ -625,38 +656,6 @@
     "# print(\"Total errors:\")\n",
     "# print(errors)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "### Implement player's strategy. You can compare it with random player \n",
-    "### (or some strategy implemented by one of you colleagues)\n",
-    "### Time limit per decision 0.01s !!!\n",
-    "\n",
-    "class YourPlayer(Player):\n",
-    "    \n",
-    "    ### player's random strategy\n",
-    "    def putCard(self, declared_card):\n",
-    "        return None, None\n",
-    "    \n",
-    "    ### randomly decides whether to check or not\n",
-    "    def checkCard(self, opponent_declaration):\n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -675,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.2"
   },
   "widgets": {
    "state": {},
