--- a/Cheater1.ipynb
+++ b/Cheater1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 184,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(9, 0), (9, 3), (11, 0), (14, 1), (9, 2), (13, 3), (11, 2), (14, 2)]\n",
-      "[(11, 1), (12, 0), (11, 3), (10, 1), (12, 3), (14, 0), (10, 0), (13, 2)]\n"
+      "[(11, 1), (12, 1), (9, 3), (11, 0), (12, 0), (13, 0), (11, 2), (12, 2)]\n",
+      "[(9, 0), (13, 1), (14, 0), (14, 3), (10, 0), (10, 3), (14, 2), (9, 1)]\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 187,
    "metadata": {
     "collapsed": true
    },
@@ -131,50 +131,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 188,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Some examplary random player\n",
-    "\n",
     "class RandomPlayer(Player):\n",
-    "    \n",
-    "    ### player's random strategy\n",
+    "    def __init__(self, name):\n",
+    "        super().__init__(name)\n",
+    "\n",
     "    def putCard(self, declared_card):\n",
-    "        \n",
-    "        ### check if must draw\n",
     "        if len(self.cards) == 1 and declared_card is not None and self.cards[0][0] < declared_card[0]:\n",
     "            return \"draw\"\n",
     "        \n",
-    "        ### player randomly decides which card put on the table\n",
-    "        card = random.choice(self.cards)\n",
-    "        declaration = card\n",
-    "        \n",
-    "        ### player randomly decides whether to cheat or not\n",
-    "        cheat = np.random.choice([True, False])\n",
-    "       \n",
-    "        ### if (s)he decides to cheat, (s)he randomly declares the card.\n",
-    "        if cheat:\n",
-    "            declaration = random.choice(self.cards)             \n",
-    "            \n",
-    "        ### Yet, declared card should be no worse than a card on the top of the pile . \n",
-    "        if declared_card is not None and declaration[0] < declared_card[0]:\n",
-    "            declaration = (min(declared_card[0]+1,14), declaration[1])\n",
+    "        valid_cards = [card for card in self.cards if card[0] >= declared_card[0]] if declared_card else self.cards\n",
+    "        if not valid_cards:\n",
+    "            return \"draw\"\n",
     "\n",
-    "        ### return the decision (true card) and declaration (player's declaration)\n",
+    "        card = random.choice(valid_cards)\n",
+    "        cheat = np.random.choice([True, False])\n",
+    "        declaration = card if not cheat else random.choice(valid_cards)\n",
+    "        if declared_card is not None and declaration[0] < declared_card[0]:\n",
+    "            declaration = (min(declared_card[0] + 1, 14), declaration[1])\n",
     "        return card, declaration\n",
-    "    \n",
-    "    ### randomly decides whether to check or not\n",
+    "\n",
     "    def checkCard(self, opponent_declaration):\n",
-    "        return np.random.choice([True, False])\n",
-    "    "
+    "        if opponent_declaration in self.cards:\n",
+    "            return True\n",
+    "        return np.random.choice([True, False], p=[0.3, 0.7])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 189,
    "metadata": {
     "collapsed": true
    },
@@ -362,33 +352,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RandomPlayer(Player):\n",
-    "    ### player's random strategy\n",
+    "    def __init__(self, name):\n",
+    "        super().__init__(name)\n",
+    "\n",
     "    def putCard(self, declared_card):\n",
-    "        ### check if must draw\n",
     "        if len(self.cards) == 1 and declared_card is not None and self.cards[0][0] < declared_card[0]:\n",
     "            return \"draw\"\n",
-    "        ### player randomly decides which card put on the table\n",
-    "        card = random.choice(self.cards)\n",
-    "        declaration = card\n",
-    "        ### player randomly decides whether to cheat or not\n",
-    "        cheat = np.random.choice([True, False])\n",
-    "        ### if (s)he decides to cheat, (s)he randomly declares the card.\n",
-    "        if cheat:\n",
-    "            declaration = random.choice(self.cards)             \n",
-    "        ### Yet, declared card should be no worse than a card on the top of the pile . \n",
+    "        \n",
+    "        valid_cards = [card for card in self.cards if card[0] >= declared_card[0]] if declared_card else self.cards\n",
+    "        if not valid_cards:\n",
+    "            return \"draw\"\n",
+    "\n",
+    "        card = random.choice(valid_cards)\n",
+    "        cheat = np.random.choice([True, False], p=[0.1, 0.9])  # Zmieniono prawdopodobieństwo oszukiwania\n",
+    "        declaration = card if not cheat else random.choice(valid_cards)\n",
     "        if declared_card is not None and declaration[0] < declared_card[0]:\n",
-    "            declaration = (min(declared_card[0]+1,14), declaration[1])\n",
-    "        ### return the decision (true card) and declaration (player's declaration)\n",
+    "            declaration = (min(declared_card[0] + 1, 14), declaration[1])\n",
     "        return card, declaration\n",
-    "    \n",
-    "    ### randomly decides whether to check or not\n",
+    "\n",
     "    def checkCard(self, opponent_declaration):\n",
-    "        return np.random.choice([True, False])"
+    "        if opponent_declaration in self.cards:\n",
+    "            return True\n",
+    "        return np.random.choice([True, False], p=[0.4, 0.6])  # Zmieniono prawdopodobieństwo sprawdzenia\n"
    ]
   },
   {
@@ -400,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 191,
    "metadata": {
     "scrolled": false
    },
@@ -410,43 +400,43 @@
      "output_type": "stream",
      "text": [
       "Player (1): Player A received:\n",
-      "[(11, 1), (13, 1), (11, 0), (10, 1), (13, 0), (9, 2), (13, 3), (10, 0)]\n",
+      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2)]\n",
       "Player (2): OUR player received:\n",
-      "[(9, 0), (12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (11, 2), (13, 2)]\n",
+      "[(11, 0), (12, 0), (11, 3), (13, 3), (10, 0), (14, 3), (12, 2), (14, 2)]\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
       "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (13, 1), (11, 0), (10, 1), (13, 0), (9, 2), (13, 3), (10, 0)]\n",
+      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(9, 0), (12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (11, 2), (13, 2)]\n",
+      "[(11, 0), (12, 0), (11, 3), (13, 3), (10, 0), (14, 3), (12, 2), (14, 2)]\n",
       "Pile: \n",
       "[]\n",
       "Declared top card:\n",
       "None\n",
       "\n",
-      "[+] OUR player puts (9, 0) and declares (9, 0)\n",
+      "[+] OUR player puts (10, 0) and declares (10, 0)\n",
       "[!] Player A: I want to check\n",
       "\tYou are wrong!\n",
       "Feedback = OUR player : checked this turn = True; I checked = False; I drew cards = False; revealed card = None; number of taken cards = 1\n",
-      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (9, 0); number of taken cards = 1\n",
+      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (10, 0); number of taken cards = 1\n",
       "Cards taken: \n",
-      "[(9, 0)]\n",
+      "[(10, 0)]\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
       "==== Player A MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (13, 1), (11, 0), (10, 1), (13, 0), (9, 2), (13, 3), (10, 0), (9, 0)]\n",
+      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2), (10, 0)]\n",
       "Player (1): OUR player hand:\n",
-      "[(12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (11, 2), (13, 2)]\n",
+      "[(11, 0), (12, 0), (11, 3), (13, 3), (14, 3), (12, 2), (14, 2)]\n",
       "Pile: \n",
       "[]\n",
       "Declared top card:\n",
       "None\n",
       "\n",
-      "[+] Player A puts (10, 0) and declares (9, 2)\n",
+      "[+] Player A puts (10, 0) and declares (10, 0)\n",
       "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "\n",
@@ -454,15 +444,15 @@
       "==== CURRENT STATE ================================\n",
       "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (13, 1), (11, 0), (10, 1), (13, 0), (9, 2), (13, 3), (9, 0)]\n",
+      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (11, 2), (13, 2)]\n",
+      "[(11, 0), (12, 0), (11, 3), (13, 3), (14, 3), (12, 2), (14, 2)]\n",
       "Pile: \n",
       "[(10, 0)]\n",
       "Declared top card:\n",
-      "(9, 2)\n",
+      "(10, 0)\n",
       "\n",
-      "[+] OUR player puts (11, 2) and declares (11, 2)\n",
+      "[+] OUR player puts (11, 0) and declares (11, 0)\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "\n",
@@ -470,47 +460,54 @@
       "==== CURRENT STATE ================================\n",
       "==== Player A MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (13, 1), (11, 0), (10, 1), (13, 0), (9, 2), (13, 3), (9, 0)]\n",
+      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (13, 2)]\n",
+      "[(12, 0), (11, 3), (13, 3), (14, 3), (12, 2), (14, 2)]\n",
       "Pile: \n",
-      "[(10, 0), (11, 2)]\n",
+      "[(10, 0), (11, 0)]\n",
       "Declared top card:\n",
-      "(11, 2)\n",
+      "(11, 0)\n",
       "\n",
-      "[+] Player A puts (11, 0) and declares (11, 0)\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "[+] Player A puts (10, 3) and declares (10, 3)\n",
+      "2\n",
+      "(11, 0)\n",
+      "(10, 3)\n",
+      "(11, 0)\n",
+      "[ERROR] Improper move!\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
       "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (13, 1), (10, 1), (13, 0), (9, 2), (13, 3), (9, 0)]\n",
+      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(12, 1), (14, 1), (12, 0), (11, 3), (14, 0), (13, 2)]\n",
+      "[(12, 0), (11, 3), (13, 3), (14, 3), (12, 2), (14, 2)]\n",
       "Pile: \n",
-      "[(10, 0), (11, 2), (11, 0)]\n",
+      "[(10, 0), (11, 0)]\n",
       "Declared top card:\n",
-      "(11, 0)\n",
+      "(10, 3)\n",
       "\n",
       "[+] OUR player puts (11, 3) and declares (11, 3)\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "[!] Player A: I want to check\n",
+      "\tYou are wrong!\n",
+      "Feedback = OUR player : checked this turn = True; I checked = False; I drew cards = False; revealed card = None; number of taken cards = 3\n",
+      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (11, 3); number of taken cards = 3\n",
+      "Cards taken: \n",
+      "[(10, 0), (11, 0), (11, 3)]\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
       "==== Player A MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (13, 1), (10, 1), (13, 0), (9, 2), (13, 3), (9, 0)]\n",
+      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2), (10, 0), (11, 0), (11, 3)]\n",
       "Player (1): OUR player hand:\n",
-      "[(12, 1), (14, 1), (12, 0), (14, 0), (13, 2)]\n",
+      "[(12, 0), (13, 3), (14, 3), (12, 2), (14, 2)]\n",
       "Pile: \n",
-      "[(10, 0), (11, 2), (11, 0), (11, 3)]\n",
+      "[]\n",
       "Declared top card:\n",
-      "(11, 3)\n",
+      "None\n",
       "\n",
-      "[+] Player A puts (13, 1) and declares (13, 0)\n",
+      "[+] Player A puts (9, 3) and declares (9, 3)\n",
       "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n"
      ]
@@ -528,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 192,
    "metadata": {
     "collapsed": true
    },
@@ -568,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -576,9 +573,9 @@
      "output_type": "stream",
      "text": [
       "Wins all:\n",
-      "[ 7.583 92.417]\n",
+      "[ 7.715 92.285]\n",
       "Max:\n",
-      "[0, 100]\n"
+      "[1, 99]\n"
      ]
     }
    ],
