--- a/Cheater1.ipynb
+++ b/Cheater1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 194,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(11, 1), (12, 1), (9, 3), (11, 0), (12, 0), (13, 0), (11, 2), (12, 2)]\n",
-      "[(9, 0), (13, 1), (14, 0), (14, 3), (10, 0), (10, 3), (14, 2), (9, 1)]\n"
+      "[(12, 1), (9, 3), (10, 1), (12, 3), (14, 3), (10, 3), (13, 2), (9, 1)]\n",
+      "[(11, 1), (9, 0), (13, 1), (11, 3), (13, 0), (13, 3), (10, 0), (14, 2)]\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 197,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 198,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 199,
    "metadata": {
     "collapsed": true
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 201,
    "metadata": {
     "scrolled": false
    },
@@ -400,43 +400,23 @@
      "output_type": "stream",
      "text": [
       "Player (1): Player A received:\n",
-      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2)]\n",
+      "[(9, 0), (12, 1), (10, 1), (9, 2), (14, 0), (11, 2), (14, 3), (10, 2)]\n",
       "Player (2): OUR player received:\n",
-      "[(11, 0), (12, 0), (11, 3), (13, 3), (10, 0), (14, 3), (12, 2), (14, 2)]\n",
-      "\n",
-      "\n",
-      "==== CURRENT STATE ================================\n",
-      "==== OUR player MOVES ====\n",
-      "Player (0): Player A hand:\n",
-      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2)]\n",
-      "Player (1): OUR player hand:\n",
-      "[(11, 0), (12, 0), (11, 3), (13, 3), (10, 0), (14, 3), (12, 2), (14, 2)]\n",
-      "Pile: \n",
-      "[]\n",
-      "Declared top card:\n",
-      "None\n",
-      "\n",
-      "[+] OUR player puts (10, 0) and declares (10, 0)\n",
-      "[!] Player A: I want to check\n",
-      "\tYou are wrong!\n",
-      "Feedback = OUR player : checked this turn = True; I checked = False; I drew cards = False; revealed card = None; number of taken cards = 1\n",
-      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (10, 0); number of taken cards = 1\n",
-      "Cards taken: \n",
-      "[(10, 0)]\n",
+      "[(11, 1), (13, 1), (11, 0), (12, 0), (11, 3), (13, 0), (13, 2), (14, 2)]\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
       "==== Player A MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2), (10, 0)]\n",
+      "[(9, 0), (12, 1), (10, 1), (9, 2), (14, 0), (11, 2), (14, 3), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(11, 0), (12, 0), (11, 3), (13, 3), (14, 3), (12, 2), (14, 2)]\n",
+      "[(11, 1), (13, 1), (11, 0), (12, 0), (11, 3), (13, 0), (13, 2), (14, 2)]\n",
       "Pile: \n",
       "[]\n",
       "Declared top card:\n",
       "None\n",
       "\n",
-      "[+] Player A puts (10, 0) and declares (10, 0)\n",
+      "[+] Player A puts (9, 2) and declares (9, 2)\n",
       "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "\n",
@@ -444,13 +424,13 @@
       "==== CURRENT STATE ================================\n",
       "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2)]\n",
+      "[(9, 0), (12, 1), (10, 1), (14, 0), (11, 2), (14, 3), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(11, 0), (12, 0), (11, 3), (13, 3), (14, 3), (12, 2), (14, 2)]\n",
+      "[(11, 1), (13, 1), (11, 0), (12, 0), (11, 3), (13, 0), (13, 2), (14, 2)]\n",
       "Pile: \n",
-      "[(10, 0)]\n",
+      "[(9, 2)]\n",
       "Declared top card:\n",
-      "(10, 0)\n",
+      "(9, 2)\n",
       "\n",
       "[+] OUR player puts (11, 0) and declares (11, 0)\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
@@ -460,56 +440,65 @@
       "==== CURRENT STATE ================================\n",
       "==== Player A MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2)]\n",
+      "[(9, 0), (12, 1), (10, 1), (14, 0), (11, 2), (14, 3), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(12, 0), (11, 3), (13, 3), (14, 3), (12, 2), (14, 2)]\n",
+      "[(11, 1), (13, 1), (12, 0), (11, 3), (13, 0), (13, 2), (14, 2)]\n",
       "Pile: \n",
-      "[(10, 0), (11, 0)]\n",
+      "[(9, 2), (11, 0)]\n",
       "Declared top card:\n",
       "(11, 0)\n",
       "\n",
-      "[+] Player A puts (10, 3) and declares (10, 3)\n",
-      "2\n",
-      "(11, 0)\n",
-      "(10, 3)\n",
-      "(11, 0)\n",
-      "[ERROR] Improper move!\n",
+      "[+] Player A puts (14, 0) and declares (14, 0)\n",
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
       "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2)]\n",
+      "[(9, 0), (12, 1), (10, 1), (11, 2), (14, 3), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(12, 0), (11, 3), (13, 3), (14, 3), (12, 2), (14, 2)]\n",
+      "[(11, 1), (13, 1), (12, 0), (11, 3), (13, 0), (13, 2), (14, 2)]\n",
       "Pile: \n",
-      "[(10, 0), (11, 0)]\n",
+      "[(9, 2), (11, 0), (14, 0)]\n",
       "Declared top card:\n",
-      "(10, 3)\n",
+      "(14, 0)\n",
       "\n",
-      "[+] OUR player puts (11, 3) and declares (11, 3)\n",
-      "[!] Player A: I want to check\n",
-      "\tYou are wrong!\n",
-      "Feedback = OUR player : checked this turn = True; I checked = False; I drew cards = False; revealed card = None; number of taken cards = 3\n",
-      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (11, 3); number of taken cards = 3\n",
-      "Cards taken: \n",
-      "[(10, 0), (11, 0), (11, 3)]\n",
+      "[+] OUR player puts (14, 2) and declares (14, 2)\n",
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
       "==== Player A MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (9, 3), (13, 1), (13, 0), (11, 2), (10, 3), (13, 2), (10, 2), (10, 0), (11, 0), (11, 3)]\n",
+      "[(9, 0), (12, 1), (10, 1), (11, 2), (14, 3), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(12, 0), (13, 3), (14, 3), (12, 2), (14, 2)]\n",
+      "[(11, 1), (13, 1), (12, 0), (11, 3), (13, 0), (13, 2)]\n",
       "Pile: \n",
-      "[]\n",
+      "[(9, 2), (11, 0), (14, 0), (14, 2)]\n",
       "Declared top card:\n",
-      "None\n",
+      "(14, 2)\n",
       "\n",
-      "[+] Player A puts (9, 3) and declares (9, 3)\n",
+      "[+] Player A puts (14, 3) and declares (14, 3)\n",
       "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n"
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "\n",
+      "\n",
+      "==== CURRENT STATE ================================\n",
+      "==== OUR player MOVES ====\n",
+      "Player (0): Player A hand:\n",
+      "[(9, 0), (12, 1), (10, 1), (11, 2), (10, 2)]\n",
+      "Player (1): OUR player hand:\n",
+      "[(11, 1), (13, 1), (12, 0), (11, 3), (13, 0), (13, 2)]\n",
+      "Pile: \n",
+      "[(9, 2), (11, 0), (14, 0), (14, 2), (14, 3)]\n",
+      "Declared top card:\n",
+      "(14, 3)\n",
+      "\n",
+      "[+] OUR player decides to draw cards\n",
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n"
      ]
     }
    ],
@@ -525,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 202,
    "metadata": {
     "collapsed": true
    },
@@ -565,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +562,7 @@
      "output_type": "stream",
      "text": [
       "Wins all:\n",
-      "[ 7.715 92.285]\n",
+      "[ 7.49 92.51]\n",
       "Max:\n",
       "[1, 99]\n"
      ]
