--- a/Cheater1.ipynb
+++ b/Cheater1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(12, 1), (9, 3), (10, 1), (12, 3), (14, 3), (10, 3), (13, 2), (9, 1)]\n",
-      "[(11, 1), (9, 0), (13, 1), (11, 3), (13, 0), (13, 3), (10, 0), (14, 2)]\n"
+      "[(9, 0), (9, 3), (13, 1), (11, 3), (10, 1), (9, 2), (14, 0), (14, 2)]\n",
+      "[(11, 1), (14, 1), (13, 0), (10, 0), (14, 3), (10, 3), (13, 2), (10, 2)]\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -400,23 +400,23 @@
      "output_type": "stream",
      "text": [
       "Player (1): Player A received:\n",
-      "[(9, 0), (12, 1), (10, 1), (9, 2), (14, 0), (11, 2), (14, 3), (10, 2)]\n",
+      "[(11, 1), (9, 3), (13, 1), (9, 2), (13, 3), (14, 3), (10, 0), (10, 2)]\n",
       "Player (2): OUR player received:\n",
-      "[(11, 1), (13, 1), (11, 0), (12, 0), (11, 3), (13, 0), (13, 2), (14, 2)]\n",
+      "[(12, 1), (11, 0), (14, 1), (12, 0), (10, 1), (14, 0), (10, 3), (9, 1)]\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
       "==== Player A MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(9, 0), (12, 1), (10, 1), (9, 2), (14, 0), (11, 2), (14, 3), (10, 2)]\n",
+      "[(11, 1), (9, 3), (13, 1), (9, 2), (13, 3), (14, 3), (10, 0), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(11, 1), (13, 1), (11, 0), (12, 0), (11, 3), (13, 0), (13, 2), (14, 2)]\n",
+      "[(12, 1), (11, 0), (14, 1), (12, 0), (10, 1), (14, 0), (10, 3), (9, 1)]\n",
       "Pile: \n",
       "[]\n",
       "Declared top card:\n",
       "None\n",
       "\n",
-      "[+] Player A puts (9, 2) and declares (9, 2)\n",
+      "[+] Player A puts (11, 1) and declares (11, 1)\n",
       "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "\n",
@@ -424,13 +424,13 @@
       "==== CURRENT STATE ================================\n",
       "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(9, 0), (12, 1), (10, 1), (14, 0), (11, 2), (14, 3), (10, 2)]\n",
+      "[(9, 3), (13, 1), (9, 2), (13, 3), (14, 3), (10, 0), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(11, 1), (13, 1), (11, 0), (12, 0), (11, 3), (13, 0), (13, 2), (14, 2)]\n",
+      "[(12, 1), (11, 0), (14, 1), (12, 0), (10, 1), (14, 0), (10, 3), (9, 1)]\n",
       "Pile: \n",
-      "[(9, 2)]\n",
+      "[(11, 1)]\n",
       "Declared top card:\n",
-      "(9, 2)\n",
+      "(11, 1)\n",
       "\n",
       "[+] OUR player puts (11, 0) and declares (11, 0)\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
@@ -440,15 +440,15 @@
       "==== CURRENT STATE ================================\n",
       "==== Player A MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(9, 0), (12, 1), (10, 1), (14, 0), (11, 2), (14, 3), (10, 2)]\n",
+      "[(9, 3), (13, 1), (9, 2), (13, 3), (14, 3), (10, 0), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(11, 1), (13, 1), (12, 0), (11, 3), (13, 0), (13, 2), (14, 2)]\n",
+      "[(12, 1), (14, 1), (12, 0), (10, 1), (14, 0), (10, 3), (9, 1)]\n",
       "Pile: \n",
-      "[(9, 2), (11, 0)]\n",
+      "[(11, 1), (11, 0)]\n",
       "Declared top card:\n",
       "(11, 0)\n",
       "\n",
-      "[+] Player A puts (14, 0) and declares (14, 0)\n",
+      "[+] Player A puts (13, 3) and declares (13, 3)\n",
       "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "\n",
@@ -456,15 +456,15 @@
       "==== CURRENT STATE ================================\n",
       "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(9, 0), (12, 1), (10, 1), (11, 2), (14, 3), (10, 2)]\n",
+      "[(9, 3), (13, 1), (9, 2), (14, 3), (10, 0), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(11, 1), (13, 1), (12, 0), (11, 3), (13, 0), (13, 2), (14, 2)]\n",
+      "[(12, 1), (14, 1), (12, 0), (10, 1), (14, 0), (10, 3), (9, 1)]\n",
       "Pile: \n",
-      "[(9, 2), (11, 0), (14, 0)]\n",
+      "[(11, 1), (11, 0), (13, 3)]\n",
       "Declared top card:\n",
-      "(14, 0)\n",
+      "(13, 3)\n",
       "\n",
-      "[+] OUR player puts (14, 2) and declares (14, 2)\n",
+      "[+] OUR player puts (14, 0) and declares (14, 0)\n",
       "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
       "\n",
@@ -472,13 +472,13 @@
       "==== CURRENT STATE ================================\n",
       "==== Player A MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(9, 0), (12, 1), (10, 1), (11, 2), (14, 3), (10, 2)]\n",
+      "[(9, 3), (13, 1), (9, 2), (14, 3), (10, 0), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(11, 1), (13, 1), (12, 0), (11, 3), (13, 0), (13, 2)]\n",
+      "[(12, 1), (14, 1), (12, 0), (10, 1), (10, 3), (9, 1)]\n",
       "Pile: \n",
-      "[(9, 2), (11, 0), (14, 0), (14, 2)]\n",
+      "[(11, 1), (11, 0), (13, 3), (14, 0)]\n",
       "Declared top card:\n",
-      "(14, 2)\n",
+      "(14, 0)\n",
       "\n",
       "[+] Player A puts (14, 3) and declares (14, 3)\n",
       "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
@@ -488,17 +488,21 @@
       "==== CURRENT STATE ================================\n",
       "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(9, 0), (12, 1), (10, 1), (11, 2), (10, 2)]\n",
+      "[(9, 3), (13, 1), (9, 2), (10, 0), (10, 2)]\n",
       "Player (1): OUR player hand:\n",
-      "[(11, 1), (13, 1), (12, 0), (11, 3), (13, 0), (13, 2)]\n",
+      "[(12, 1), (14, 1), (12, 0), (10, 1), (10, 3), (9, 1)]\n",
       "Pile: \n",
-      "[(9, 2), (11, 0), (14, 0), (14, 2), (14, 3)]\n",
+      "[(11, 1), (11, 0), (13, 3), (14, 0), (14, 3)]\n",
       "Declared top card:\n",
       "(14, 3)\n",
       "\n",
-      "[+] OUR player decides to draw cards\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n"
+      "[+] OUR player puts (14, 1) and declares (14, 1)\n",
+      "[!] Player A: I want to check\n",
+      "\tYou are wrong!\n",
+      "Feedback = OUR player : checked this turn = True; I checked = False; I drew cards = False; revealed card = None; number of taken cards = 3\n",
+      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (14, 1); number of taken cards = 3\n",
+      "Cards taken: \n",
+      "[(14, 0), (14, 3), (14, 1)]\n"
      ]
     }
    ],
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -554,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -562,9 +566,9 @@
      "output_type": "stream",
      "text": [
       "Wins all:\n",
-      "[ 7.49 92.51]\n",
+      "[ 7.478 92.522]\n",
       "Max:\n",
-      "[1, 99]\n"
+      "[0, 100]\n"
      ]
     }
    ],
@@ -660,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.4"
   },
   "widgets": {
    "state": {},
